--- a/index.html
+++ b/index.html
@@ -11,10 +11,18 @@
     <div id="container">
         <div id="game-screen">
             <div id="game-canvas">
+                <div id="engine">
 
+                    <div id="player">
+                        <img src="imgs/player.gif">
+                    </div>
+
+
+
+                </div>
             </div>
             <div id="game-powers">
-                
+               
             </div>
 
 
