--- a/index.html
+++ b/index.html
@@ -131,7 +131,20 @@
 
                </div>
                <div id="gp-powers">
-
+                    <div id="powers">
+                        <div class="character-power">
+                            <div id="character-power-filter">
+                                <h3>Heal</h3>
+                                <img src="/imgs/heal-spell.gif">
+                                <p>1</p>
+                            </div>
+                        </div>
+                        <div class="character-power"></div>
+                        <div class="character-power"></div>
+                        <div class="character-power"></div>
+                        <div class="character-power"></div>
+                        <div class="character-power"></div>
+                    </div>
                </div>
             </div>
 
