--- a/index.html
+++ b/index.html
@@ -139,10 +139,41 @@
                                 <p>1</p>
                             </div>
                         </div>
-                        <div class="character-power"></div>
-                        <div class="character-power"></div>
-                        <div class="character-power"></div>
-                        <div class="character-power"></div>
+                        <div class="character-power">
+                            <div id="character-power-filter">
+                                <h3>Fisical</h3>
+                                <img src="/imgs/fisical-spell.gif">
+                                <p>2</p>
+                            </div>
+                        </div>
+                        <div class="character-power">
+                            <div id="character-power-filter">
+                                <h3>Fire</h3>
+                                <img src="/imgs/fire-spell.gif">
+                                <p>3</p>
+                            </div>
+                        </div>
+                        <div class="character-power">
+                            <div id="character-power-filter">
+                                <h3>Energy</h3>
+                                <img src="/imgs/energy-spell.gif">
+                                <p>4</p>
+                            </div>
+                        </div>
+                        <div class="character-power">
+                            <div id="character-power-filter">
+                                <h3>Terra</h3>
+                                <img src="/imgs/terra-spell.gif">
+                                <p>5</p>
+                            </div>
+                        </div>
+                        <div class="character-power">
+                            <div id="character-power-filter">
+                                <h3>Ice</h3>
+                                <img src="/imgs/ice-spell.gif">
+                                <p>6</p>
+                            </div>
+                        </div>
                         <div class="character-power"></div>
                     </div>
                </div>
