--- a/index.html
+++ b/index.html
@@ -174,7 +174,13 @@
                                 <p>6</p>
                             </div>
                         </div>
-                        <div class="character-power"></div>
+                        <div class="character-power">
+                            <div id="character-power-filter">
+                                <h3>Ultimate</h3>
+                                <img src="/imgs/ultimate-spell.gif">
+                                <p>7</p>
+                            </div>
+                        </div>
                     </div>
                </div>
             </div>
