--- a/index.html
+++ b/index.html
@@ -246,8 +246,20 @@
                     <div id="infos-character-header">
                         <h3> Player Info</h3>
                     </div>
-                    <div id="infos-character-level">
-                        
+                    <div id="infos-charlevel-div">
+                        <div id="infos-character-lvl">
+                            <div id="infos-label-character-level">
+                                Level
+                            </div>
+                            <div id="infos-number-character-level">
+                                1
+                            </div>
+                        </div>
+                        <div id="infos-bar-character-level">
+                            <div id="exp-to-lvl-up">
+                                <div id="exp-progress"></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
