--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                      
                             </div>
                             <div id="mana-output-div">
-                                <p id="mana-output">240</p>
+                                <p id="mana-output"></p>
                         </div>
                     </div>
                 </div>  
