--- a/index.html
+++ b/index.html
@@ -184,18 +184,18 @@
                     </div>
 
 
-                    <div id="infos-charlevelshielding-div">
-                        <div id="infos-character-lvlshielding">
-                            <div id="infos-label-character-levelshielding">
+                    <div id="infos-charexperience-div">
+                        <div id="infos-character-experience">
+                            <div id="infos-label-character-experience">
                                 Experience
                             </div>
-                            <div id="infos-number-character-levelshielding">
-                                1
+                            <div id="infos-number-character-experience">
+                                0
                             </div>
                         </div>
-                        <div id="infos-bar-character-levelshielding">
-                            <div id="exp-to-lvl-up-shielding">
-                                <div id="exp-progress-shielding"></div>
+                        <div id="infos-bar-character-experience">
+                            <div id="exp-to-lvl-up-experience">
+                                <div id="exp-progress-experience"></div>
                             </div>
                         </div>
                     </div>
@@ -208,7 +208,7 @@
                                 Level
                             </div>
                             <div id="infos-number-character-level">
-                                1
+                                
                             </div>
                         </div>
                         <div id="infos-bar-character-level">
