--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
               
                 <div id="engine">
 
+                    <div id="loot-alert-div"><p id="loot-alert"></p></div>
                     <div id="fire-field">
                         <img src="/imgs/fireField.gif">
                     </div>
@@ -33,6 +34,7 @@
 
                         <div id="player">
                             <div id="hit-player"></div>
+                            <div id="heal-player"></div>
                             <div id="div-player-life">
                                 <div id="player-max-life">
                                     <div id="player-life"></div>
@@ -342,6 +344,8 @@
 
     <script src="scripts/player.js"></script>
     <script src="scripts/enemies.js"></script>
+    <script src="scripts/spells.js"></script>
+
     <script src="scripts/app.js"></script>
     
 
