--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                         <div id="player">
                             <div id="hit-player"></div>
                             <div id="heal-player"></div>
+                            <div id="heal-fx">
+                                <img src="/imgs/healFx.webp">
+                            </div>
                             <div id="div-player-life">
                                 <div id="player-max-life">
                                     <div id="player-life"></div>
@@ -64,10 +67,27 @@
                         <div id="shopping-header-name">
                             <p>Market</p>
                         </div>
-                      <div id="shopping-close-btn">
-                        x
-                      </div>
+                        <div id="shopping-close-btn">
+                            x
+                        </div>
                     </div>
+
+                    <div id="shopping-cart">
+                        <div id="shopping-cart-all-powers">
+
+                            <h3>SPELLS</h3>
+                            <div id="shopping-cart-powers">
+                        </div>
+                
+
+                        </div>
+                    </div>
+
+
+
+
+
+
                 </div>
                
 
