--- a/index.html
+++ b/index.html
@@ -77,7 +77,45 @@
 
                             <h3>SPELLS</h3>
                             <div id="shopping-cart-powers">
-                        </div>
+                                <div class="card-powers">
+                                    <h3>Fisical</h3>
+                                    <img src="/imgs/fisical-spell.gif">
+                                    <p>Cost:</p>
+                                    <p>500 GOLD</p>
+                                </div>
+                                <div class="card-powers">
+                                    <h3>Fire</h3>
+                                    <img src="/imgs/fire-spell.gif">
+                                    <p>Cost:</p>
+                                    <p>500 GOLD</p>
+                                </div>
+                                <div class="card-powers">
+                                    <h3>Energy</h3>
+                                    <img src="/imgs/energy-spell.gif">
+                                    <p>Cost:</p>
+                                    <p>500 GOLD</p>
+
+                                </div>
+                                <div class="card-powers">
+                                    <h3>Terra</h3>
+                                    <img src="/imgs/terra-spell.gif">
+                                    <p>Cost:</p>
+                                    <p>500 GOLD</p>
+                                </div>
+                                <div class="card-powers">
+                                    <h3>Ice</h3>
+                                    <img src="/imgs/ice-spell.gif">
+                                    <p>Cost:</p>
+                                    <p>500 GOLD</p>
+                                </div>
+                                <div class="card-powers">
+                                    <h3>Ultimate</h3>
+                                    <img src="/imgs/ultimate-spell.gif">
+                                    <p>Cost:</p>
+                                    <p>500 GOLD</p>
+                                </div>
+
+                            </div>
                 
 
                         </div>
