--- a/index.html
+++ b/index.html
@@ -29,11 +29,16 @@
                             <div id="hit-player"></div>
                             <div id="heal-player"></div>
                             <div id="heal-fx">
-                                <img src="/imgs/healFx.webp">
+                                <img style="width: 80px; margin-left: -80px;"src="/imgs/healFx.webp">
                             </div>
                             <div id="div-player-life">
                                 <div id="player-max-life">
                                     <div id="player-life"></div>
+                                </div>
+                            </div>
+                            <div id="div-player-mana">
+                                <div id="player-max-mana">
+                                    <div id="player-mana"></div>
                                 </div>
                             </div>
                             <div id="player-img"></div>
