--- a/index.html
+++ b/index.html
@@ -19,11 +19,6 @@
             <div id="game-canvas">
               
                 <div id="engine">
-
-                    <div id="fire-field">
-                        <img src="/imgs/fireField.gif">
-                    </div>
-
         
                         <div id="player">
                             <div id="hit-player"></div>
@@ -508,7 +503,7 @@
     </div>
 
 
-
+    <script src="scripts/frog.js"></script>
     <script src="scripts/player.js"></script>
     <script src="scripts/enemies.js"></script>
     <script src="scripts/spells.js"></script>
