--- a/index.html
+++ b/index.html
@@ -71,8 +71,6 @@
 
                 </div>
 
-            
-
                 <!-- SHOPPING -->
                 <!-- SHOPPING -->
                 <!-- SHOPPING -->
@@ -183,8 +181,6 @@
 
                 </div>
                
-
-
 
             </div>
 
@@ -503,6 +499,7 @@
     </div>
 
 
+    <script src="scripts/fireHorse.js"></script>
     <script src="scripts/frog.js"></script>
     <script src="scripts/player.js"></script>
     <script src="scripts/enemies.js"></script>
