--- a/index.html
+++ b/index.html
@@ -499,6 +499,7 @@
     </div>
 
 
+    <script src="scripts/iceHorse.js"></script>
     <script src="scripts/fireHorse.js"></script>
     <script src="scripts/frog.js"></script>
     <script src="scripts/player.js"></script>
