--- a/index.html
+++ b/index.html
@@ -488,11 +488,14 @@
 
 
     <script src="scripts/iceHorse.js"></script>
+    <script src="scripts/iceHorse2.js"></script>
     <script src="scripts/fireHorse.js"></script>
     <script src="scripts/fireHorse2.js"></script>
     <script src="scripts/frog.js"></script>
     <script src="scripts/frog2.js"></script>
     <script src="scripts/frog3.js"></script>
+    <script src="scripts/frog4.js"></script>
+    <script src="scripts/frog5.js"></script>
     <script src="scripts/player.js"></script>
     <script src="scripts/enemies.js"></script>
     <script src="scripts/spells.js"></script>
