up animation steps

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         </div>
                     </div>
 
-                    <div id="shopping-cart">
+                    <div id="shopping-cart"d>
                         <div id="shopping-cart-all-powers">
 
                             <h3>SPELLS</h3>
