--- a/index.html
+++ b/index.html
@@ -487,6 +487,7 @@
     </div>
 
 
+    <script src="scripts/zumbie.js"></script>
     <script src="scripts/iceHorse.js"></script>
     <script src="scripts/iceHorse2.js"></script>
     <script src="scripts/fireHorse.js"></script>
